--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,14 +15,18 @@
     "next": "Next",
     "loading": "Loading...",
     "error": "Error",
-    "success": "Success"
+    "success": "Success",
+    "read_more": "Read more",
+    "read_less": "Read less"
   },
   "hero": {
     "greeting": "Hello and welcome to my personal space. My name is",
     "name": "Alexis Cattaruzza",
-    "title": "Frontend Developer passionate about modern and performant interfaces — React, TypeScript, Tailwind.",
-    "download_cv": "Download my CV!",
-    "contact": "Contact me"
+    "title": "Junior Full-stack Developer — building modern, fast and maintainable interfaces.",
+    "summary": "Graduated with distinction in Applied Computer Science, I gained hands-on full-stack experience during an internship and a contract at Cronos Europa. I worked on Java / Spring Boot backends and Angular / TypeScript frontends, optimized SQL queries, performed legacy data migrations, integrated the LinkedIn API for automated CV import, and handled post-production bug fixes and maintenance. I am experienced with Docker, Git, testing practices and documentation, and I took a cybersecurity elective during my studies.",
+    "objective": "Open to any opportunity, I am aiming for a role where I can continuously learn and grow my skills. Preferably a frontend or full-stack position within an Agile product team focused on reusable UI components, performance optimization, CI/CD and DevOps practices, accessibility and robust testing. I want to take on technical ownership, learn through pair programming, and contribute to frontend architecture decisions.",
+    "objective_title": "Objective",
+    "available": "Available"
   },
   "timeline": {
     "title": "Journey",
@@ -50,7 +54,7 @@
       "studies": {
         "role": "Bachelor in Computer Science & Application Development",
         "company": "Haute école Léonard de Vinci",
-        "date": "2022 — 2025",
+        "date": "September 2022 — June 2025",
         "description": "Degree obtained with distinction. Web specialization, final project and cybersecurity elective. Full-stack development oriented training and best practices (architecture, testing).",
         "category": "Education"
       },
@@ -175,8 +179,8 @@
     "address": "Based in Geneva",
     "region": "Switzerland - Lake Geneva region",
     "local_zone": {
-      "title": "Local zone (20km)",
-      "description": "Available for travel within a 20km radius around Geneva",
+      "title": "Local zone",
+      "description": "Available for travel around the Lake Geneva region",
       "status": "✅ Available"
     },
     "remote": {
